Dodana dokumentacija in povezava

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 			body {padding: 10px;}
 			.btn {margin-top: 10px;}
 			.obvestilo {margin-left:10px;}
+			.majhna-ikona {font-size:60%; margin-left:10px}
 		</style>
 	</head>
 	<body>
-		<div class="page-header"><h2>Vnos in poizvedovanje po EHR podatkih <small>EhrScape platforma</small></h2></div>
+		<div class="page-header"><h2>Vnos in poizvedovanje po EHR podatkih <small>EhrScape platforma</small><a href="dokumentacija/index.html"><span class="majhna-ikona glyphicon glyphicon-question-sign"></span></a></h2></div>
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-6">
 				<div class="panel panel-default">
